--- a/index.html
+++ b/index.html
@@ -1,3 +1,52 @@
+<!DOCTYPE html>
 <html>
-  
+<head>
+    <title>Click here</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,0,0" />
+    <style>
+        body {
+            background: linear-gradient(to top right, #1a20c6, #58b983, rgb(214, 158, 158));
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            text-align: center;
+        }
+        .button {
+            display: inline-flex;
+            align-items: center;
+            padding: 10px 20px;
+            font-size: 30px;
+            font-weight: bold;
+            color: rgb(255, 255, 255);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+            text-decoration: none;
+            background: linear-gradient(to top right, #ff0000, #0000ff, white);
+            border: none;
+            border-radius: 50px;
+            transition: background 0.1s ease;
+        }
+
+        .button:hover {
+            background: linear-gradient(to bottom right, white, #0000ff, #ff0000);
+        }
+
+    </style>
+</head>
+<body>
+    <div class="container">
+        <a class="button" href="./main/main.html">
+            Click here
+            <span class="material-symbols-outlined">
+                arrow_selector_tool
+            </span>
+            
+        </a>
+    </div>
+</body>
 </html>
